--- a/StorageCrafting.csproj
+++ b/StorageCrafting.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1E849F00-09AF-444A-9BCD-B7938E76082D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JournalPause</RootNamespace>
+    <RootNamespace>StorageCrafting</RootNamespace>
     <AssemblyName>StorageCrafting</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
