final changes before v0.8.0 release

--- a/CraftFromStorage.csproj
+++ b/CraftFromStorage.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TinyResort</RootNamespace>
-    <AssemblyName>TinyResort.CraftFromStorage</AssemblyName>
+    <AssemblyName>CraftFromStorage</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
