--- a/CraftFromStorage.csproj
+++ b/CraftFromStorage.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1E849F00-09AF-444A-9BCD-B7938E76082D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CraftFromStorage</RootNamespace>
+    <RootNamespace>TinyResort</RootNamespace>
     <AssemblyName>CraftFromStorage</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -40,9 +41,12 @@
     <Reference Include="0Harmony">
       <HintPath>..\DinkumInstallFolder\BepInEx\core\0Harmony.dll</HintPath>
     </Reference>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>..\DinkumInstallFolder\Dinkum_Data\Managed\Assembly-CSharp.dll</HintPath>
+    <Reference Include="Assembly-CSharp_publicized">
+      <HintPath>..\DinkumInstallFolder\Dinkum_Data\Managed\publicized_assemblies\Assembly-CSharp_publicized.dll</HintPath>
     </Reference>
+<!--    <Reference Include="Assembly-CSharp">
+      <HintPath>..\DinkumInstallFolder\Dinkum_Data\Managed\Assembly-CSharp.dll</HintPath>
+    </Reference>-->
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>..\DinkumInstallFolder\Dinkum_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
