--- a/CraftFromStorage.csproj
+++ b/CraftFromStorage.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="canBeCraftedPatch.cs" />
     <Compile Include="CraftFromStorage.cs" />
     <Compile Include="..\TinyResortTools\Tiny Resort Tools\**">
       <Link>Tiny Resort Tools\**</Link>
