[BROKEN] Fix Syntax & Compile Errors
A lot of naming changes were never fixed and pushed to the repo. This fixes those references, but is not a working version of the mod.

--- a/CraftFromStorage.csproj
+++ b/CraftFromStorage.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="dev.TinyResort.TRTools">
-      <HintPath>..\DinkumInstallFolder\BepInEx\plugins\dev.TinyResort.TRTools.dll</HintPath>
+      <HintPath>..\DinkumInstallFolder\BepInEx\plugins\TR Tools\dev.TinyResort.TRTools.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp_publicized">
       <HintPath>..\DinkumInstallFolder\Dinkum_Data\Managed\publicized_assemblies\Assembly-CSharp_publicized.dll</HintPath>
